<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="center" android:id="@id/frameLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/imageViewBackground" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/ic_launcher_background" android:contentDescription="@string/onvifer" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:id="@id/textViewNameModel" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textViewTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <ScrollView android:id="@id/scrollView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/linearLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TableLayout android:id="@id/tableLayout" android:background="#ff333333" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1" android:shrinkColumns="1" />
            </LinearLayout>
        </ScrollView>
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/btShareDevice" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/share_a_device" android:layout_weight="1.0" />
            <Button android:id="@id/btRemoveYours" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/remove_yours" android:layout_weight="1.0" />
        </LinearLayout>
        <Button android:id="@id/buttonONVIFDeviceList" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/onvif_device_list" />
    </LinearLayout>
</FrameLayout>
